누락된 부분 추가 및 한글 예제 추가

--- a/bowsa/bowsa.ipynb
+++ b/bowsa/bowsa.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -44,8 +44,8 @@
       "               insulting = True              neg : pos    =     13.0 : 1.0\n",
       "              vulnerable = True              pos : neg    =     12.3 : 1.0\n",
       "               ludicrous = True              neg : pos    =     11.8 : 1.0\n",
-      "             uninvolving = True              neg : pos    =     11.7 : 1.0\n",
       "                  avoids = True              pos : neg    =     11.7 : 1.0\n",
+      "             uninvolving = True              neg : pos    =     11.7 : 1.0\n",
       "             fascination = True              pos : neg    =     10.3 : 1.0\n",
       "              astounding = True              pos : neg    =     10.3 : 1.0\n",
       "                 idiotic = True              neg : pos    =      9.8 : 1.0\n"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +100,7 @@
        "'neg'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +123,7 @@
        "'neg'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +164,7 @@
        " 'u': True}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +193,7 @@
        "'pos'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
        "'neg'"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'jumps': True, 'lazy': True, 'quick': True, 'brown': True, 'fox': True, 'over': True, 'the': True, 'dog': True}\n"
+      "{'jumps': True, 'dog': True, 'over': True, 'the': True, 'fox': True, 'brown': True, 'quick': True, 'lazy': True}\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +266,7 @@
        "'neg'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -347,15 +347,31 @@
     "from konlpy.tag import Twitter\n",
     "pos_tagger = Twitter()\n",
     "def tokenize(doc):\n",
-    "    # norm, stem은 optional\n",
     "    return ['/'.join(t) for t in pos_tagger.pos(doc, norm=True, stem=True)]\n",
+    "\n",
     "train_docs = [(tokenize(row[1]), row[2]) for row in train_data]\n",
     "test_docs = [(tokenize(row[1]), row[2]) for row in test_data]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def term_exists(doc):\n",
+    "    #return {'exists({})'.format(word): (word in set(doc)) for word in selected_words}\n",
+    "    return {word: True for word in doc}\n",
+    "\n",
+    "train_xy = [(term_exists(d), c) for d, c in train_docs]\n",
+    "test_xy = [(term_exists(d), c) for d, c in test_docs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -364,18 +380,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 0.778\n",
+      "accuracy: 0.786\n",
       "Most Informative Features\n",
-      "                      ㅡㅡ = True                0 : 1      =     11.6 : 1.0\n",
-      "                     아깝다 = True                0 : 1      =     11.5 : 1.0\n",
-      "                      최고 = True                1 : 0      =     11.1 : 1.0\n",
-      "                    재미없다 = True                0 : 1      =     10.6 : 1.0\n",
-      "                     쓰레기 = True                0 : 1      =     10.4 : 1.0\n",
-      "                     괜찮다 = True                1 : 0      =      9.5 : 1.0\n",
-      "                     멋지다 = True                1 : 0      =      9.5 : 1.0\n",
-      "                     재밌다 = True                1 : 0      =      9.1 : 1.0\n",
-      "                       냐 = True                0 : 1      =      8.5 : 1.0\n",
-      "                      최악 = True                0 : 1      =      7.7 : 1.0\n"
+      "       ㅡㅡ/KoreanParticle = True                0 : 1      =     11.6 : 1.0\n",
+      "           아깝다/Adjective = True                0 : 1      =     11.5 : 1.0\n",
+      "                 최고/Noun = True                1 : 0      =     11.1 : 1.0\n",
+      "          재미없다/Adjective = True                0 : 1      =     10.6 : 1.0\n",
+      "                쓰레기/Noun = True                0 : 1      =     10.4 : 1.0\n",
+      "           괜찮다/Adjective = True                1 : 0      =      9.5 : 1.0\n",
+      "           멋지다/Adjective = True                1 : 0      =      9.5 : 1.0\n",
+      "           재밌다/Adjective = True                1 : 0      =      9.1 : 1.0\n",
+      "                  냐/Josa = True                0 : 1      =      8.5 : 1.0\n",
+      "                 최악/Noun = True                0 : 1      =      7.7 : 1.0\n"
      ]
     }
    ],
@@ -383,6 +399,83 @@
     "classifier = nltk.NaiveBayesClassifier.train(train_xy)\n",
     "print ('accuracy:', nltk.classify.util.accuracy(classifier, test_xy))\n",
     "classifier.show_most_informative_features()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 한글도 임의의 문장으로 테스트 해봐야겠죠?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "t = '빠른 갈색 여우는 게으른 개를 뛰어 넘습니다.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = tokenize(t)\n",
+    "t = term_exists(t)\n",
+    "classifier.classify(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t = '오늘 이 시간 정말 멋지고 재밌고 괜찮다!!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = tokenize(t)\n",
+    "t = term_exists(t)\n",
+    "classifier.classify(t)"
    ]
   },
   {
